--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ body{
         z-index: 5;
     }
 
+    .logo img{
+        width: 170px;
+    }
+
     /*localisation*/
     .location{
         background-color:#EAEAEA;
@@ -25,13 +29,16 @@ body{
         color: #353535;
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
         position: absolute;
-        width: 100%;
-        top: 75px;
+        top: 70px;
+        left: 0;
+        right: 0;
         p{
             text-align: center;
-            font-size: 1.3em;
+            font-size: 16px;
             font-family: "roboto", "sans-serif";
             margin: 12px;
+            font-weight: 400;
+            padding-right: 8px;
         }
     }
    
@@ -42,6 +49,8 @@ body{
 
     .title{
         text-align: center;
+        margin-top: 20px;
+        padding-bottom: 20px;
     }
 
 
@@ -52,10 +61,12 @@ body{
         padding-bottom: 50px;
    }
 
-   h2{
-        width: 84%;
+   .title-top{
+        width: 67%;
         margin: auto;
-        font-weight: 900;
+        font-weight: 700;
+        font-size: 24px;
+        font-family: 'Roboto';
    }
 
    .select{
@@ -75,84 +86,54 @@ body{
         border-radius: 25px;
         color: white;
         width: 218px;
+        height: 50px;
+        margin-top: 15px;
    }
 
    /*début de la partie fonctionnement*/
     .title-fonctioning{
         padding-bottom: 10px;
         width: 340px;
-
+        font-size: 24px;
+        font-weight: 700;
+        font-family: 'Roboto';
     }
+
 
 
    .fonctioning{
         display: flex;
         flex-direction: column;
         padding: 45px 0;
+        width: 88%;
+        margin: auto;
    }
-
-
-    /* bouton de la partie fonctionnement*/
-   .fonctioning-btn{
-        border: none;
-        border-radius: 20px;
-        box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.15) ;
-        width: 85%;
-        height: 72.38px;
-        text-align: center;
-        margin: 20px 0 20px 30px;
-   }
-
-
-   /*texte des boutons de la partie fonctionnement */
-   .fonctioning-text{
-        margin-left: 20px;
-        font-size: 16px;
-        font-weight: 500;
-        font-family: "Roboto";
-   }
-
-    .fa-mobile{
-        color: rgba(126, 126, 126, 1);
-        padding-left: 17px;
-        width: 16px;
-        height: 15.92px;
-        font-size: 20px;
-    }   
-
-    .fa-bars{
-       color: rgba(126, 126, 126, 1);
-       width: 16px;
-       height: 15.92px;
-       font-size: 20px;
-    }
-
-    .fa-shop{
-        color: rgba(147, 86, 220, 1);
-        width: 16px;
-        height: 15.92px;
-        font-size: 20px;
-    }
 
     /*début de la partie card*/
     .restaurant-title{
         width: 340px;
+        font-family: 'Roboto';
+        font-size: 24px;
+        font-weight: 700;
     }
+
 
     .all-cards{
         background-color: rgba(246, 246, 246, 0.7);
-        padding-top: 44px;
+        padding: 45px 0;
+        width: 90%;
+        margin: auto;
     }
     .card{
-        width: 340px;
+        width: 100%;
         height: 270px;
         border-radius: 15px;
-        margin: 25px auto;
+        margin: 24px auto;
         background-color: rgba(255, 255, 255, 1);
     }
     .card-img{
         width: 100%;
-        height: 200px;
+        height: 180px;
     }
     .card-img img{
         width: 100%;
@@ -212,5 +193,5 @@ body{
         color: white;
         width: 20px;
     }
-    
+   
 }
