--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ li{
     color: rgba(255, 255, 255, 1);
     text-decoration: none;
     font-family: 'Roboto';
+    
 }
 
 
@@ -231,6 +232,13 @@ li{
     .resto{
         background-color: rgba(246, 246, 246, 0.7);
     }
+
+    .link{
+        padding-top: 7px;
+    }
+     .link-footer{
+        padding: 0;
+     }
 
     /*icon footer*/
     .fa-utensils {
@@ -503,8 +511,8 @@ li{
 
 
     .all-cards {
-        /* background-color: rgba(246, 246, 246, 0.7); */
-        padding: 45px 0;
+         
+        padding: 45px 0 5px 0;
         width: 100%;
         margin: auto;
     }
@@ -549,17 +557,22 @@ li{
 
     /*Positionnement de l'icone coeur sur les cards*/
     .fa-heart {
-        position: relative;
+       /* position: relative;
         left: 82%;
         bottom: 43px;
-        font-size: 25px;
+        font-size: 25px;*/
     }
 
     /*début de la section footer*/
     .footer {
         background-color: rgba(53, 53, 53, 1);
         color: white;
-        padding: 10px 20px;
+        padding: 45px 38px 5px 0;
+    }
+
+    .footer-logo{
+        margin-left: 90px;
+        padding-bottom: 5px;
     }
 
     .logo2 {
@@ -567,12 +580,17 @@ li{
         font-weight: 900;
         font-style: italic;
         color: rgba(255, 255, 255, 1);
-        font-size: 20px;
+        font-size: 23px;
     }
 
     .space {
         margin-left: 10px;
     }
+
+    .back{
+        background-color: rgba(246, 246, 246, 1);
+    }
+
 
     .resto{
         max-width: 1080px;
@@ -589,6 +607,11 @@ li{
     .fa-handshake {
         color: white;
         width: 20px;
+    }
+
+    .fa-handshake-angle{
+        margin-right: 7px;
+        margin-left: -19px;
     }
 
     #card1 {
